--- a/deployment_playbook.yml
+++ b/deployment_playbook.yml
@@ -4,7 +4,7 @@
   become: true
   vars:
     nexus_url: http://ec2-13-39-150-247.eu-west-3.compute.amazonaws.com:8081/repository
-    repository_type: java-maven-app-release
+    repository_type: java-maven-war-appD-release
     group_id: com%2Fmycompany%2Fapp
     artifact_id: hello-world-war
     version: 1.0.3
@@ -22,6 +22,3 @@
 
   - name: Deploying artifact in webapps
     ansible.builtin.shell: cp /home/ec2-user/faangler.war /opt/apache-tomcat-9.0.83/webapps/faangler.war
-
-  - name: remove the artifact
-    ansible.builtin.shell: rm -rf /home/ec2-user/faangler.war
